# dbt-study

./: .gitignore  profiles.yml  profiles.yml.sample
.github/workflows/: pr-cleanup-lei.yml  pr-slim-ci-lei.yml  prod-build-lei.yml
_course_resources/: course-resources.md
course/: README.md
course/airbnb/: dbt_project.yml  packages.yml
course/airbnb/_prod_profiles/: set_env.sh.sample
course/airbnb/analyses/: full_moon_no_sleep.sql
course/airbnb/macros/: no_empty_strings.sql  select_positive_values.sql
course/my_dbt_dagster_project/: pyproject.toml  setup.py
course/my_dbt_dagster_project/.tmp_dagster_home_r9uf2ys0/history/: runs.db
course/my_dbt_dagster_project/.tmp_dagster_home_r9uf2ys0/history/runs/: .db  4a754f54-270c-44d1-91e6-98eb836f44ad.db  93b69810-f23f-4496-a221-af1d2199a759.db  index.db
course/my_dbt_dagster_project/.tmp_dagster_home_r9uf2ys0/schedules/: schedules.db
course/my_dbt_dagster_project/.tmp_dagster_home_r9uf2ys0/storage/4a754f54-270c-44d1-91e6-98eb836f44ad/compute_logs/: zxljeeoz.err  zxljeeoz.out
course/my_dbt_dagster_project/.tmp_dagster_home_r9uf2ys0/storage/93b69810-f23f-4496-a221-af1d2199a759/compute_logs/: cjukgmwv.err  cjukgmwv.out
course/my_dbt_dagster_project/.tmp_dagster_home_v6vhc0ow/history/: runs.db
course/my_dbt_dagster_project/.tmp_dagster_home_v6vhc0ow/history/runs/: .db  index.db
course/my_dbt_dagster_project/.tmp_dagster_home_v6vhc0ow/schedules/: schedules.db
course/my_dbt_dagster_project/my_dbt_dagster_project/: assets.py  definitions.py  project.py  schedules.py
linear-algebra/: visulize-function.py
(+21 files in other folders)
