[project]
name = "my_dbt_dagster_project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-dbt",
    "dbt-core<1.11",
    "dbt-snowflake<1.11",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "my_dbt_dagster_project.definitions"
code_location_name = "my_dbt_dagster_project"